--- a/homeworks/homework2/Third_part/JavaScript/HW2_Third_Part.html
+++ b/homeworks/homework2/Third_part/JavaScript/HW2_Third_Part.html
@@ -21,7 +21,7 @@
                     Insert the number of uniform random variates (N):
                 </td>
                 <td>
-                    <input type="number" id="random_variates" name="random_variates" required value="12">
+                    <input type="number" id="random_variates" name="random_variates" required>
                 </td>
             </tr>
             <tr>
@@ -29,7 +29,7 @@
                     Insert the number of intervals (k):
                 </td>
                 <td>
-                    <input type="number" id="intervals" name="intervals" required value="4">
+                    <input type="number" id="intervals" name="intervals" required>
                 </td>
             </tr>
             <tr>
