--- a/homeworks/homework7/HW7_JS.html
+++ b/homeworks/homework7/HW7_JS.html
@@ -7,8 +7,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> 
         <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0/dist/chart.min.js"></script> 
     </head>
-    <body style="background-color: black">
-        <div style="background-color: white; text-align: center; align-items: center; width:93vw; margin-top: 20px; margin-left:3.5vw ;">
+    <body style="background-color: black; color: white;">
+        <div style="background-color: black; text-align: center; align-items: center; width:93vw; margin-top: 20px; margin-left:3.5vw ;">
             <br>
             <br>
             <form id="f1">
@@ -70,9 +70,6 @@
                     <br>
                     <div style="display: flex; align-items: center;"></div>
                     <button type="button" class="btn btn-success" style="color: white;" onclick="collectData()"> Send </button>  
-                    <button type="button" class="btn btn-info">
-                        <a href="https://github.com/Noemi2001/statistics/blob/main/HW5/HW5_JS.html" style="color: white;"> View Code </a>
-                    </button>
                     </div> 
                     <br>
                     <canvas id="myCanvas" style="background-color: rgb(236 236 236 / 94%); align-self: center;"></canvas> 
